--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   outline_material_icons: ^0.1.0
   flutter_speed_dial: ^1.1.1
   md2_tab_indicator: ^1.0.2
+  flutter_secure_storage: ^3.2.1+1
 
 dev_dependencies:
   flutter_test:
