add arrow_drop_down/up assets

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ flutter:
           weight: 700
           style: italic
 
+  assets:
+    - assets/
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
