--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,10 @@ dependencies:
   outline_material_icons: ^0.1.0
   flutter_speed_dial: ^1.1.1
   md2_tab_indicator: ^1.0.2
+  path_provider: ^0.5.0+1
   flutter_secure_storage: ^3.2.1+1
+  package_info: ^0.4.0+3
+  #permission_handler: '^2.2.0'
 
 dev_dependencies:
   flutter_test:
