--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   package_info: ^0.4.0+3
   permission_handler: '^2.2.0'
   flutter_document_picker: ^3.0.0
+  url_launcher: ^5.0.2
 
 dev_dependencies:
   flutter_test:
