--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,7 +38,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.niklas8.remote_files"
+        applicationId "com.niklas8.remotefiles"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
