update app icons for android and ios

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.7.1
 
 flutter_icons:
-  image_path: "assets/app_icon_bg.png"
+  image_path: "assets/app_icon_round.png"
   android: "ic_launcher"
   ios: true
   adaptive_icon_background: "assets/app_icon.png"
