--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   permission_handler: '^2.2.0'
   file_picker: ^1.3.4+1
   url_launcher: ^5.0.2
+  shared_preferences: ^0.5.2+1
 
 dev_dependencies:
   flutter_test:
