--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   file_picker: ^1.3.4+1
   url_launcher: ^5.0.2
   shared_preferences: ^0.5.2+1
+  open_file: ^2.0.1+2
 
 dev_dependencies:
   flutter_test:
