--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,23 +20,19 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-
-  ssh: ^0.0.3
-  outline_material_icons: ^0.1.0
-  flutter_speed_dial: ^1.1.1
-  md2_tab_indicator: ^1.0.2
-  path_provider: ^1.1.0
-  package_info: ^0.4.0+3
-  permission_handler: '^2.2.0'
   file_picker: ^1.3.4+1
-  url_launcher: ^5.0.2
-  shared_preferences: ^0.5.2+1
-  open_file: ^2.0.1+2
-  provider: ^2.0.0
+  flutter_speed_dial: ^1.1.1
   floating_action_row: ^0.1.0
+  md2_tab_indicator: ^1.0.2
+  open_file: ^2.0.1+2
+  outline_material_icons: ^0.1.0
+  package_info: ^0.4.0+3
+  path_provider: ^1.1.0
+  permission_handler: ^2.2.0
+  provider: ^2.0.0
+  shared_preferences: ^0.5.2+1
+  ssh: ^0.0.3
+  url_launcher: ^5.0.2
 
 dev_dependencies:
   flutter_test:
