--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   firebase_analytics:  ^3.0.3
   firebase_core: ^0.4.0+6
   floating_action_row: ^0.1.0
+  hive: ^1.0.0
   http: ^0.12.0+2
   material_design_icons_flutter: ^3.2.4096
   md2_tab_indicator: ^1.0.2
@@ -41,8 +42,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  image: ^2.1.3
   flutter_launcher_icons: ^0.7.2+1
+  image: ^2.1.3
+  hive_generator: ^0.5.0
+  build_runner: ^1.6.9
 
 flutter_icons:
   image_path_android: "assets/app_icon_round.png"
