--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,10 @@ dependencies:
     sdk: flutter
 
   file_picker: ^1.3.4+1
-  firebase_analytics:  ^3.0.3
+  firebase_analytics: ^3.0.3
   firebase_core: ^0.4.0+6
   floating_action_row: ^0.1.0
+  flutter_secure_storage: ^3.3.1+1
   hive: ^1.0.0
   http: ^0.12.0+2
   material_design_icons_flutter: ^3.2.4096
@@ -55,13 +56,11 @@ flutter_icons:
   adaptive_icon_foreground: "assets/app_icon_foreground.png"
   adaptive_icon_background: "#ffffff"
 
-
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   assets:
     - assets/app_icon.png
     - assets/app_icon_bg.png
@@ -72,18 +71,14 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.io/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
