--- a/ssh_package/example/pubspec.yaml
+++ b/ssh_package/example/pubspec.yaml
@@ -1,83 +1,56 @@
-name: RemoteFiles
-description: An open source SFTP client for Android and iOS
+name: ssh_example
+description: Demonstrates how to use the ssh plugin.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
 # Both the version and the builder number may be overridden in flutter
 # build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.0.11+11
+# Read more about versioning at semver.org.
+version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.2 <3.0.0"
+  sdk: ">=2.0.0-dev.68.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  file_picker: ^1.3.4+1
-  floating_action_row: ^0.1.0
-  flutter_secure_storage: ^3.3.1+1
-  hive: ^1.0.0
-  http: ^0.12.0+2
-  material_design_icons_flutter: ^3.2.4096
-  md2_tab_indicator: ^1.0.2
-  open_file: ^2.0.1+2
-  outline_material_icons: ^0.1.0
-  package_info: ^0.4.0+3
-  path_provider: ^1.1.0
-  permission_handler: ^2.2.0
-  provider: ^2.0.0
-  shared_preferences: ^0.5.2+1
-  ssh:
-    path: ./ssh_package
-  url_launcher: ^5.0.2
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^0.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_launcher_icons: ^0.7.2+1
-  image: ^2.1.3
-  hive_generator: ^0.5.0
-  build_runner: ^1.6.9
+  ssh:
+    path: ../
 
-flutter_icons:
-  image_path_android: "assets/app_icon_round.png"
-  image_path_ios: "assets/app_icon_square.png"
-  android: true
-  ios: true
-  adaptive_icon_foreground: "assets/app_icon_foreground.png"
-  adaptive_icon_background: "#ffffff"
+  path_provider: ^0.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-  assets:
-    - assets/app_icon.png
-    - assets/app_icon_bg.png
-    - assets/arrow_drop_down.png
-    - assets/arrow_drop_up.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
+
   # For details regarding adding assets from package dependencies, see
   # https://flutter.io/assets-and-images/#from-packages
+
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
